--- a/mobile/css/my_style.css
+++ b/mobile/css/my_style.css
@@ -347,7 +347,7 @@ body{
    margin: 15px;
 }
 .my_page .cases-list li div img{
-    width: 100%;
+    width: 150px;
 }
 .my_page .cases-list li p{
     text-align: left;
