--- a/mobile/css/my_style.css
+++ b/mobile/css/my_style.css
@@ -536,6 +536,9 @@ body{
     /*display: none;*/
     bottom: 10px !important;
 }
+.slider-arrows{
+    display: none;
+}
 
 select{
     position: absolute;
