--- a/mobile/css/video-js.css
+++ b/mobile/css/video-js.css
@@ -792,6 +792,7 @@ control positioning and full window mode. **
 */
 .video-js {
   background-color: #000;
+    /*background-color: #ffffff;*/
   position: relative;
   padding: 0;
   /* Start with 10px for base font size so other dimensions can be em based and
