--- a/mobile/css/my_style.css
+++ b/mobile/css/my_style.css
@@ -537,7 +537,7 @@ body{
 /*hank*/
 .slider-nav{
     /*display: none;*/
-    bottom: 10px !important;
+    bottom: 0px !important;
 }
 .slider-arrows{
     display: none;
@@ -603,32 +603,123 @@ select{
 /*媒体介绍*/
 .my_page .meiti-content{
     margin-top: 20px;
+    overflow: hidden;
 }
 
 .my_page .meiti-content .meiti-left{
     /*background-color: #00FF00;*/
     float: left;width: 50%;
-    height:1100px;
+    /*height:1300px;*/
     background-color: white;
+    padding-bottom: 40px;
 }
 .my_page .meiti-content .meiti-right{
     /*background-color: #00FFFF;*/
     float: right;width: 50%;
-    height: 1100px;
+    /*height: 1300px;*/
     background-color: white;
     /*padding-left: 20px;*/
+
+    margin-bottom:-10000px;padding-bottom:10000px;overflow: hidden;
+}
+.my_page .meiti-content .meiti-right .one_meiti{
+   margin-right: 10px;
 }
 .my_page .meiti-content .one_meiti{
-    border: 1px solid #696;
-    box-shadow: #666 0px 0px 10px;
+    border: 1px solid #002D65;
+    box-shadow: #e6e6e6 0px 0px 5px;
 
-    margin: 10px;
+    margin-left: 10px;
+    margin-top: 10px;
 
 }
 .my_page .one_meiti .one_meiti_img{
     text-align: center;
+
 }
-.my_page .meiti-content .one_meiti span{
+.my_page .one_meiti .one_meiti_img img{
+    width: 100%;
+
+}
+.my_page .meiti-content .one_meiti .one_meiti_content{
     text-align: left;
    margin-left: 10px;
+    font-size: 10px;
+
+}
+.my_page .meiti-content .one_meiti .one_meiti_date{
+    color: #8A8A8A;
+    font-size: 10px;
+    margin-left: 10px;
+
+}
+
+/*ai-robot*/
+.my_page .alading{
+    background-color: white;
+    margin-top: -17px;
+    padding-right: 10px;
+    padding-top: 20px;
+    margin-bottom: 0px;
+    padding-bottom: 10px;
+}
+.my_page .alading ul{
+    margin-left: -35px ;
+    font-size: 10px;
+}
+.my_page .alading ul li{
+    display: inline-block;
+    margin-bottom: 30px;
+    width: 100%;
+
+}
+
+.my_page .alading li img{
+
+    float: left;
+    padding-left: 5px;
+    width: 70px;
+    display: inline-block;
+    text-align: left;
+
+}
+
+.alading-info1{
+    background: url("../image/alading_info1.png");
+    background-size: 60px 60px;
+    background-repeat: no-repeat;
+    background-position-y: -6px;
+
+    padding-left: 65px;
+}
+.alading-info2{
+    background: url("../image/alading_info2.png");
+    background-size: 60px 60px;
+    background-repeat: no-repeat;
+    background-position-y: -6px;
+
+    padding-left: 65px;
+}.alading-info3{
+     background: url("../image/alading_info3.png");
+     background-size: 60px 60px;
+     background-repeat: no-repeat;
+     background-position-y: -6px;
+
+     padding-left: 65px;
+ }
+.alading-info4{
+    background: url("../image/alading_info4.png");
+    background-size: 60px 60px;
+    background-repeat: no-repeat;
+    background-position-y: -6px;
+
+    padding-left: 65px;
+}
+.alading-info5{
+    background: url("../image/alading_info5.png");
+    background-size: 60px 60px;
+    background-repeat: no-repeat;
+    background-position-y: -6px;
+
+    padding-left: 65px;
 }
