--- a/mobile/css/my_style.css
+++ b/mobile/css/my_style.css
@@ -467,7 +467,7 @@ body{
 .my_page .expert ul li{
     display: inline-block;
     margin-bottom: 30px;
-    width: 100%;
+    /*width: 100%;*/
 
 }
 
@@ -722,4 +722,28 @@ select{
     background-position-y: -6px;
     min-height: 40px;
     padding-left: 65px;
+}
+
+/*普通专家*/
+.putong_zhuanjia{
+    margin-left: -40px !important;
+    margin-right: -10px !important;
+}
+.putong_zhuanjia li{
+    background-color: #00FF00;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 5px;
+    padding-right: 10px;
+    margin-bottom: 10px !important;
+
+}
+.putong_zhuanjia .expert_info .position_img{
+    background: url("../image/dingwei.png");
+    background-size: 60px 60px;
+    background-repeat: no-repeat;
+    padding-left: 20px;
+}
+.putong_zhuanjia .head_info{
+    float: left;
 }
