--- a/mobile/css/my_style.css
+++ b/mobile/css/my_style.css
@@ -822,3 +822,9 @@ select{
     margin-right: auto;
     margin-left: auto;
 }
+
+.my_page .my_button{
+    color:#ffffff;font-size:16px;  height: 44px;background-color: #00abff; line-height: 3;margin-bottom: 5px;
+    margin-right: 20px;
+    margin-left: 20px;
+}
