--- a/mobile/css/my_style.css
+++ b/mobile/css/my_style.css
@@ -520,7 +520,7 @@ body{
 .my_page .chanpinfuwu_info{
     background-color: white;
     text-align: center;
-    margin-top: -10px;
+    /*margin-top: -10px;*/
     margin-bottom: -2px;
     padding-top: 10px;
     padding-bottom: 30px;
